--- a/Website Front End/src/Login/src/components/login/style.scss
+++ b/Website Front End/src/Login/src/components/login/style.scss
@@ -1,41 +1,43 @@
-.base-container {
+.base-container4 {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  .header {
+  .header4 {
     font-size: 24px;
     font-family: "Open Sans", sans-serif;
   }
 
-  .content {
+  .content4 {
     display: flex;
     flex-direction: column;
 
-    .image {
-      width: 21em;
-      img {
-        width: 100%;
-        height: 100%;
-      }
+
+    .image4 {
+      
+      padding-left: 15%;
+      padding-right: 15%;
+      width: 100%;
+      height: 100%;
+
     }
 
-    .form {
+    .form4 {
       margin-top: 2em;
       display: flex;
       flex-direction: column;
       align-items: center;
 
-      .form-group {
+      .form-group4 {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         width: fit-content;
-        label {
+        .label1 {
           font-size: 20px;
         }
-        input {
+        .input4 {
           margin-top: 6px;
           min-width: 18em;
           height: 37px;
@@ -59,9 +61,5 @@
         }
       }
     }
-  }
-
-  .footer {
-    margin-top: 3em;
   }
 }
