--- a/Website Front End/src/components/HeroSection.css
+++ b/Website Front End/src/components/HeroSection.css
@@ -55,7 +55,7 @@ video {
 
 
 
-input[type="text"]
+.hero-input
 {
   top: 30px;
   position: relative;
@@ -72,7 +72,7 @@ input[type="text"]
   border-radius: 25px 0 0 25px;
 }
 
-button[type="submit"]
+.hero-button
 {
   font-size: 20px;
   top: 30px;
@@ -89,8 +89,7 @@ button[type="submit"]
   
 }
 
-button[type="submit"]:hover
-{
+.hero-button {
   background: #de8c18;
   width: 150px;
   height: 50px;
@@ -121,7 +120,7 @@ button[type="submit"]:hover
     margin-top: -150px;
   }
 
-  button[type="submit"]
+  .hero-button
   {
     font-size: 20px;
     top: 29.5px;
@@ -159,7 +158,7 @@ button[type="submit"]:hover
     width: 100%;
   }
 
-  input[type="text"]
+  .hero-input
   {
     top: 30px;
     position: relative;
@@ -176,20 +175,13 @@ button[type="submit"]:hover
     border-radius: 25px;
   }
 
-  button[type="submit"]
-  {
-
-    
+  .hero-button
+  {    
     font-size: 20px;
     top: 30px;
     position: relative;
     border-radius: 25px;
-
   }
 
 
-<<<<<<< HEAD
 }
-=======
-}
->>>>>>> f03c7ec8a520ebac7a3371bf3cf158a696559988
