--- a/Website Front End/src/components/HeroSection.css
+++ b/Website Front End/src/components/HeroSection.css
@@ -53,23 +53,29 @@ video {
     'Lucida Sans', Arial, sans-serif;
 }
 
+.flex-inline {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 
 
 .hero-input
 {
-  top: 30px;
+  top: 30.5px;
   position: relative;
   display: inline-block;
   font-size: 20px;
   box-sizing: border-box;
   transition: .5s;
   background: #fff;
-  width: 550px;
+  width: 600px;
   height: 50px;
   border: none;
   outline: none;
   padding: 0 25px;
   border-radius: 25px 0 0 25px;
+  margin-left: 3%
 }
 
 .hero-button
@@ -77,19 +83,8 @@ video {
   font-size: 20px;
   top: 30px;
   position: relative;
-  border-radius: 0 25px 25px 0;
-  background: #ffc107;
-  width: 150px;
-  height: 50px;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 0 25px;
-  
-  
-}
-
-.hero-button {
+  border-radius: 25px 25px 25px 25px;
+  margin-left: -5%;
   background: #de8c18;
   width: 150px;
   height: 50px;
@@ -97,6 +92,7 @@ video {
   outline: none;
   cursor: pointer;
   padding: 0 25px;
+  
   
 }
 
@@ -132,8 +128,7 @@ video {
     border: none;
     outline: none;
     cursor: pointer;
-    padding: 0 25px;
-    
+    padding: 0 25px;  
     
   }
 
@@ -150,6 +145,7 @@ video {
   }
 
   .btn-mobile {
+    flex-direction: row;
     display: block;
     text-decoration: none;
   }
@@ -181,7 +177,101 @@ video {
     top: 30px;
     position: relative;
     border-radius: 25px;
+
   }
 
 
+}
+
+.custom-file-input {
+  color: transparent;
+  border: none;
+  outline: none;
+}
+.custom-file-input::-webkit-file-upload-button {
+  visibility: hidden;
+  border: none;
+  outline: none;
+}
+.custom-file-input::before {
+  content: 'Select Image';
+  color: black;
+  display: inline-block;
+
+  white-space: nowrap;
+  -webkit-user-select: none;
+  cursor: pointer;
+
+  font-weight: 700;
+
+  font-size: 20px;
+  top: 30px;
+  margin-left: 10%;
+  position: relative;
+  border-radius: 25px 0 0 25px;
+  background: #fff;
+  width: 200px;
+  height: 38px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 0 25px;
+  padding-top: 12px;
+  padding-left: 80px;
+
+
+}
+
+.hero-button2
+{
+  font-size: 20px;
+  top: 31.5px;
+  position: relative;
+  border-radius: 25px 25px 25px 25px;
+  background: #de8c18;
+  width: 150px;
+  height: 50px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 0 25px;
+  margin-left: -2%;
+  border: none;
+  outline: none;
+  
+}
+
+.select-class {
+  
+  font-size: 20px;
+  position: relative;
+  top: 31.5px;
+  width: 250px;
+  height: 50px;
+  border-radius: 25px 25px 25px 25px;
+  margin-right: -10%;
+  padding: 0 25px;
+  padding-left: 30px;
+  border: none;
+  outline: none;
+  margin-left: 3%;
+}
+
+.hero-button3
+{
+
+  font-size: 20px;
+  position: relative;
+  top: 31.5px;
+  border-radius: 25px 25px 25px 25px;
+  background: #de8c18;
+  width: 150px;
+  height: 50px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 0 25px;
+  font-weight: 700;
+
+  
 }
