--- a/Website/src/components/Navbar.css
+++ b/Website/src/components/Navbar.css
@@ -41,7 +41,7 @@
   grid-gap: 10px;
   list-style: none;
   text-align: center;
-  width: 60vw;
+  width: 80vw;
   justify-content: end;
   margin-right: 2rem;
 }
@@ -57,6 +57,7 @@
   text-decoration: none;
   padding: 0.5rem 1rem;
   height: 100%;
+  margin-top: 2.32em;
 }
 
 .nav-links:hover {
